--- a/service-web.html
+++ b/service-web.html
@@ -54,7 +54,7 @@
                             <li>
                                 <a href="service.html">Services</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="team.html">Our Team</a>
                                 <ul class="sub-menu">
                                     <li>
@@ -64,7 +64,7 @@
                                         <a href="#">Pricing</a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
@@ -388,10 +388,10 @@
                             <li><a href="about.html"><i class="fa-regular fa-angles-right me-1"></i> About AS Group</a></li>
                             <li><a href="service.html"><i class="fa-regular fa-angles-right me-1"></i> Our Services</a>
                             </li>
-                            <li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Pricing Plan</a>
+                            <!--<li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Pricing Plan</a>-->
                             </li>
                             <li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Our Projects</a></li>
-                            <li><a href="team.html"><i class="fa-regular fa-angles-right me-1"></i> Our Team</a></li>
+                            <!--<li><a href="team.html"><i class="fa-regular fa-angles-right me-1"></i> Our Team</a></li>-->
                         </ul>
                     </div>
                     <div class="footer__item item-big wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
