--- a/service.html
+++ b/service.html
@@ -53,7 +53,7 @@
                             <li>
                                 <a href="service.html">Services</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="team.html">Our Team</a>
                                 <ul class="sub-menu">
                                     <li>
@@ -63,7 +63,7 @@
                                         <a href="#">Pricing</a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
@@ -312,10 +312,10 @@
                             <li><a href="about.html"><i class="fa-regular fa-angles-right me-1"></i> About AS Group</a></li>
                             <li><a href="service.html"><i class="fa-regular fa-angles-right me-1"></i> Our Services</a>
                             </li>
-                            <li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Pricing Plan</a>
+                            <!--<li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Pricing Plan</a>-->
                             </li>
                             <li><a href="#"><i class="fa-regular fa-angles-right me-1"></i> Our Projects</a></li>
-                            <li><a href="team.html"><i class="fa-regular fa-angles-right me-1"></i> Our Team</a></li>
+                            <!--<li><a href="team.html"><i class="fa-regular fa-angles-right me-1"></i> Our Team</a></li>-->
                         </ul>
                     </div>
                     <div class="footer__item item-big wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
@@ -348,7 +348,8 @@
                 <div class="container">
                     <div
                         class="d-flex gap-1 flex-wrap align-items-center justify-content-md-between justify-content-center">
-                        <p class="wow fadeInDown" data-wow-delay="00ms" data-wow-duration="1500ms">&copy; All Copyright 2024 by <a href="#0">AS Group</a></p>
+                        <p class="wow fadeInDown" data-wow-delay="00ms" data-wow-duration="1500ms">&copy; All Copyright 2024
+                            by <a href="#0">AS Group</a></p>
                         <ul class="d-flex align-items-center gap-4 wow fadeInDown" data-wow-delay="200ms"
                             data-wow-duration="1500ms">
                             <li><a href="#0">Terms & Condition</a></li>
