update paragraph styling for improved readability

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <h1 class="text-white">
                                     Your Vision, Our Expertise: Let's Create Together!
                                 </h1>
-                                <p class="mt-20" style="color: rgb(1, 1, 121); font-size: larger;">
+                                <p class="mt-20" style="color: rgb(0, 0, 0); background-color: rgba(240, 248, 255, 0.342); padding:10px; font-size: larger;">
                                     we are passionate about helping businesses thrive in the digital world. 
                                     Our expert team combines creativity and technology to deliver exceptional 
                                     services that elevate your brand and engage your audience. 
